[package]

name = "ferrum"
version = "0.1.0"
description = "Extensible, Concurrency Focused Web Development in Rust."
readme = "README.md"
repository = "https://github.com/ferrum-rs/ferrum"
license = "MIT"

[lib]
name = "ferrum"
path = "src/lib.rs"

[features]
default = []
native-tls-example = ["hyper-native-tls"]

[dependencies]
typemap = "0.3"
url = "1.6"
unsafe-any = "0.4"
plugin = { git = "https://github.com/MJDSys/rust-plugin", branch = "plugin-with-sendmap" }
mime_guess = "1.8"
modifier = "0.1"
log = "0.3"
num_cpus = "1.7"
hyper = "0.11"
hyper-native-tls = { version = "0.2", optional = true }
futures = "0.1"
futures-cpupool = "0.1"

[dev-dependencies]
time = "0.1"
mime = "0.3"