[package]
name = "ferrum"
version = "0.2.1"
description = "Extensible, Concurrency Focused Web Framework in Rust."
readme = "README.md"
repository = "https://github.com/ferrum-rs/ferrum"
license = "MIT"
authors = [
    "Jonathan Reem <jonathan.reem@gmail.com>",
    "Zach Pomerantz <zmp@umich.edu>",
    "Michael Sproul <micsproul@gmail.com>",
    "Patrick Tran <patrick.tran06@gmail.com>",
    "Alexander Meshcheryakov <freecoder.xx@gmail.com>"
]

[lib]
name = "ferrum"
path = "src/lib.rs"

[features]
default = []

[dependencies]
ferrum-plugin = "0.3"
url = "1.6"
unsafe-any = "0.4"
mime = "0.3"
mime_guess = "1.8"
num_cpus = "1.8"
hyper = "0.11"
futures = "0.1"
futures-cpupool = "0.1"

[dev-dependencies]
time = "0.1"